# claude-subscription-proxy

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: main.ts  styles.css  view-model.test.ts  view-model.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude_auth.rs  commands.rs  config.rs  keys.rs  lib.rs
src-tauri/src/server/: anthropic.rs  auth.rs  claude.rs  mod.rs  openai.rs  state.rs  translate.rs
src-tauri/tests/: anthropic_endpoint.rs  claude_auth_status.rs  claude_runner.rs  commands_state.rs  config_keys_auth.rs  e2e_proxy.rs  metrics_limits.rs  server_lifecycle.rs  translate_openai.rs
